<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/property"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/propertyvalue"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2" >

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="5sp"
                    android:text="@string/d_subpath"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/txt3d_Subpath"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:singleLine="true"
                    android:textSize="15sp" >
                </EditText>
            </LinearLayout>
            
            
          

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2" >

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="5sp"
                    android:text="@string/base_image_path"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/txtBase_image_path"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:singleLine="true"
                    android:textSize="18sp" >
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2" >

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="5sp"
                    android:text="@string/context_subpath"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/txtContext_subpath"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:singleLine="true"
                    android:textSize="18sp" >
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout5"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2" >

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="5sp"
                    android:text="@string/sample_label_area_divider"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/txtLabeldivider"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:singleLine="true"
                    android:textSize="18sp" >
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout6"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2" >

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="5sp"
                    android:text="@string/sample_label_context_divider"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/txtContexdivider"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:singleLine="true"
                    android:textSize="18sp" >
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout7"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2" >

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="5sp"
                    android:text="@string/sample_label_font"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/txtLabelfont"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:singleLine="true"
                    android:textSize="15sp" >
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout8"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2" >

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="5sp"
                    android:text="@string/sample_label_font_size"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/txtLabelfontsize"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number"
                    android:singleLine="true"
                    android:textSize="18sp" >
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout9"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2" >

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="5sp"
                    android:text="@string/sample_label_placement"
                    android:textSize="15sp" />

                <Spinner
                    android:id="@+id/spnLabelPlacement"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1" />

                <!--
           <EditText
               android:id="@+id/txtLabelplacement"
               android:layout_width="fill_parent"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:textSize="18sp"
               android:singleLine="true"
           
               android:ems="10" >  

              
           </EditText>
                -->

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout10"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2" >

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="5sp"
                    android:text="@string/sample_label_sample_divider"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/txtLabelsampledivider"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:singleLine="true"
                    android:textSize="18sp" >
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout11"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2" >

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="5sp"
                    android:text="@string/sample_subpath"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/txtSamplesubpath"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:singleLine="true"
                    android:textSize="15sp" >
                </EditText>
            </LinearLayout>
            
            
            
               <LinearLayout
                android:id="@+id/linearLayout12"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone"
                android:weightSum="2" >

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="5sp"
                    android:text="@string/context_subpath_3d"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/txtContext_Subpath3d"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:singleLine="true"
                    android:textSize="15sp" >
                </EditText>
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/relativeLayout12"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/btnUpdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:text="Update Property" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>